--- a/src/app/views/registre-account/step5/step5.component.html
+++ b/src/app/views/registre-account/step5/step5.component.html
@@ -103,7 +103,7 @@
                             <button class="btn btn-block btn-ghost-primary" [routerLink]="['/register-account/step3']"> Previous</button>
                         </div>
                         <div class="col-6 " style="padding: 0px 45px 0px 10px; float: none; margin: 0 auto;">
-                            <button class="btn btn-block btn-ghost-primary active" [routerLink]="['/register-account/step5']">Continue</button>
+                            <button class="btn btn-block btn-ghost-primary active" [routerLink]="['/build-profile/home-profile']">Continue</button>
                         </div>
                     </div>
                 </div>
