--- a/src/app/views/registre-account/step1/step1.component.css
+++ b/src/app/views/registre-account/step1/step1.component.css
@@ -51,3 +51,30 @@ body{
 .margSpan{
     margin-left: 10px;
 }
+.demo-cell > .container{
+    margin-top: 80px;
+}
+.accountArea{
+    margin-top: 50px;
+}
+@media screen and (max-width: 500px) {
+	.display-6{
+        font-size: 1rem;
+        font-weight: 500;
+        margin-bottom: 0;
+    }
+    .demo-cell > .container{
+        margin-top: 18px;
+    }
+    .accountArea{
+        margin-top: 10px;
+    }
+    .display-7 {
+        font-size: 1rem;
+        font-weight: 500;
+        line-height: 1.2;
+        display: inline-block;
+        color: dimgray;
+    }
+    
+  }
