--- a/src/app/views/registre-account/step3/step3.component.css
+++ b/src/app/views/registre-account/step3/step3.component.css
@@ -22,8 +22,7 @@ button:active,
 
 .container {
 	max-width: 450px;
-    margin: 0 auto;
-    margin-top: -40px; 
+    margin: 50px auto; 
 }
 
 .steps {
