--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -1,10 +1,15 @@
-<app-header 
-  [fixed]="true"
-  [navbarBrandFull]="{src: 'https://www.centralasiametals.com/wp-content/uploads/2016/05/canaccord.jpg', width: 100, height: 54, alt: 'CoreUI Logo'}"
-  >
-  
+<app-header [fixed]="true" [navbarBrandFull]="{src: 'http://jitneytrade.com/images/logo-jitneytrade.png', width: 100, height: 52, alt: 'CoreUI Logo'}">
+
   <ul class="nav navbar-nav ml-auto">
     <li class="nav-item d-md-down-none">
+      <span class="phone" style="margin-right: 150px;">CALL US. 1.545.777.5545</span>
+    </li>
+    <li class="nav-item d-md-down-none">
+      <a class="nav-link" href="#">
+          <span class="phone" style="color: #5581AB;">LOG IN</span>
+      </a>
+    </li>
+    <!--<li class="nav-item d-md-down-none">
       <a class="nav-link" href="#"><i class="icon-bell"></i><span class="badge badge-pill badge-danger">5</span></a>
     </li>
     <li class="nav-item d-md-down-none">
@@ -32,7 +37,7 @@
         <a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Lock account</a>
         <a class="dropdown-item" href="#"><i class="fa fa-lock"></i> Logout</a>
       </div>
-    </li>
+    </li>-->
   </ul>
 </app-header>
 <div class="app-body" style="margin-top: 20px">
@@ -56,12 +61,15 @@
     </ol>-->
     <div class="container-fluid">
       <router-outlet></router-outlet>
-    </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.container-fluid -->
   </main>
   <app-aside [fixed]="true" [display]="false">
     <tabset>
       <tab>
-        <ng-template tabHeading><i class="icon-list"></i></ng-template>
+        <ng-template tabHeading>
+          <i class="icon-list"></i>
+        </ng-template>
         <div class="list-group list-group-accent">
           <div class="list-group-item list-group-item-accent-secondary bg-light text-center font-weight-bold text-muted text-uppercase small">Today</div>
           <div class="list-group-item list-group-item-accent-warning list-group-item-divider">
@@ -158,7 +166,9 @@
         </div>
       </tab>
       <tab>
-        <ng-template tabHeading><i class="icon-speech"></i></ng-template>
+        <ng-template tabHeading>
+          <i class="icon-speech"></i>
+        </ng-template>
         <div class="p-3">
           <div class="message">
             <div class="py-3 pb-5 mr-3 float-left">
@@ -237,36 +247,46 @@
         </div>
       </tab>
       <tab>
-        <ng-template tabHeading><i class="icon-settings"></i></ng-template>
+        <ng-template tabHeading>
+          <i class="icon-settings"></i>
+        </ng-template>
         <div class="p-3">
           <h6>Settings</h6>
           <div class="aside-options">
             <div class="clearfix mt-4">
-              <small><b>Option 1</b></small>
+              <small>
+                <b>Option 1</b>
+              </small>
               <label class="switch switch-label switch-pill switch-success switch-sm float-right">
                 <input type="checkbox" class="switch-input" checked>
                 <span class="switch-slider" data-checked="On" data-unchecked="Off"></span>
               </label>
             </div>
             <div>
-              <small class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</small>
+              <small class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                magna aliqua.</small>
             </div>
           </div>
           <div class="aside-options">
             <div class="clearfix mt-3">
-              <small><b>Option 2</b></small>
+              <small>
+                <b>Option 2</b>
+              </small>
               <label class="switch switch-label switch-pill switch-success switch-sm float-right">
                 <input type="checkbox" class="switch-input">
                 <span class="switch-slider" data-checked="On" data-unchecked="Off"></span>
               </label>
             </div>
             <div>
-              <small class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</small>
+              <small class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                magna aliqua.</small>
             </div>
           </div>
           <div class="aside-options">
             <div class="clearfix mt-3">
-              <small><b>Option 3</b></small>
+              <small>
+                <b>Option 3</b>
+              </small>
               <label class="switch switch-label switch-pill switch-success switch-sm float-right">
                 <input type="checkbox" class="switch-input">
                 <span class="switch-slider" data-checked="On" data-unchecked="Off"></span>
@@ -276,7 +296,9 @@
           </div>
           <div class="aside-options">
             <div class="clearfix mt-3">
-              <small><b>Option 4</b></small>
+              <small>
+                <b>Option 4</b>
+              </small>
               <label class="switch switch-label switch-pill switch-success switch-sm float-right">
                 <input type="checkbox" class="switch-input" checked>
                 <span class="switch-slider" data-checked="On" data-unchecked="Off"></span>
@@ -285,22 +307,38 @@
           </div>
           <hr>
           <h6>System Utilization</h6>
-          <div class="text-uppercase mb-1 mt-4"><small><b>CPU Usage</b></small></div>
+          <div class="text-uppercase mb-1 mt-4">
+            <small>
+              <b>CPU Usage</b>
+            </small>
+          </div>
           <div class="progress progress-xs">
             <div class="progress-bar bg-info" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
           <small class="text-muted">348 Processes. 1/4 Cores.</small>
-          <div class="text-uppercase mb-1 mt-2"><small><b>Memory Usage</b></small></div>
+          <div class="text-uppercase mb-1 mt-2">
+            <small>
+              <b>Memory Usage</b>
+            </small>
+          </div>
           <div class="progress progress-xs">
             <div class="progress-bar bg-warning" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
           <small class="text-muted">11444GB/16384MB</small>
-          <div class="text-uppercase mb-1 mt-2"><small><b>SSD 1 Usage</b></small></div>
+          <div class="text-uppercase mb-1 mt-2">
+            <small>
+              <b>SSD 1 Usage</b>
+            </small>
+          </div>
           <div class="progress progress-xs">
             <div class="progress-bar bg-danger" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
           <small class="text-muted">243GB/256GB</small>
-          <div class="text-uppercase mb-1 mt-2"><small><b>SSD 2 Usage</b></small></div>
+          <div class="text-uppercase mb-1 mt-2">
+            <small>
+              <b>SSD 2 Usage</b>
+            </small>
+          </div>
           <div class="progress progress-xs">
             <div class="progress-bar bg-success" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
@@ -311,6 +349,9 @@
   </app-aside>
 </div>
 <app-footer>
-  <span><a href="https://coreui.io">CoreUI</a> &copy; 2018 creativeLabs.</span>
-  <span class="ml-auto">Powered by <a href="https://coreui.io/angular">CoreUI for Angular</a></span>
+  <span>
+    <a href="https://coreui.io">CoreUI</a> &copy; 2018 creativeLabs.</span>
+  <span class="ml-auto">Powered by
+    <a href="https://coreui.io/angular">CoreUI for Angular</a>
+  </span>
 </app-footer>
