--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -6,7 +6,7 @@
     </li>
     <li class="nav-item d-md-down-none">
       <a class="nav-link" href="#">
-          <span class="phone" style="color: #5581AB;">Khaled</span>
+          <span class="phone" style="color: #5581AB;">LOG IN</span>
       </a>
     </li>
     <!--<li class="nav-item d-md-down-none">
