--- a/src/app/views/registre-account/step1/selected-card/selected-card.component.html
+++ b/src/app/views/registre-account/step1/selected-card/selected-card.component.html
@@ -1,8 +1,5 @@
 <div class="row">
         <div class="card-body bg-light">
-                <span style="font-size: 14px ; font-weight: 400">{{ accountSelected?.acccountName }}</span> 
-                <span class="portfolio-type_cards-item_remove" (click)="onClick()">
-                        Remove
-                </span>
+                <span style="font-size: 14px ; font-weight: 400">{{ accountSelected }}</span> 
            </div>
 </div>
