--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -1,8 +1,10 @@
-<app-header [fixed]="true" [navbarBrandFull]="{src: 'http://jitneytrade.com/images/logo-jitneytrade.png', width: 100, height: 52, alt: 'CoreUI Logo'}">
-
+<app-header [fixed]="true" [navbarBrandFull]="">
+  <a href="#">
+      <img src="http://jitneytrade.com/images/logo-jitneytrade.png" height="52px" width="100px" style="margin-left:28px">
+  </a>
   <ul class="nav navbar-nav ml-auto">
     <li class="nav-item d-md-down-none">
-      <span class="phone" style="margin-right: 150px;">CALL US. 1.545.777.5545</span>
+      <span class="phone" style="margin-right: 150px;">CALL US. 1.514.985.8080</span>
     </li>
     <li class="nav-item d-md-down-none">
       <a class="nav-link" href="#">
